cluster/apps/networking/traefik/external/devbin/container/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: container
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.19
    ports:
      - name: default
        port: 9000
        protocol: TCP
