cluster/apps/networking/traefik/external/devbin/container/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container
  namespace: external
spec:
  ports:
    - name: default
      port: 9000
      protocol: TCP
      targetPort: 9000
  clusterIP: None
  type: ClusterIP
