cluster/apps/networking/traefik/external/devbin/container/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: train-car-container
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: container
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_CONTAINER_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: container
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_CONTAINER_DOMAIN}"
      secretName: container-tls
